CMake improvement. Interim commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,8 @@ ELSE()
   SET(EMBREE_LIB_TYPE SHARED)
 ENDIF()
 
+OPTION(EMBREE_INSTALL_COMMON "Install common libraries (tasking, sys, etc)" ${EMBREE_STATIC_LIB})
+
 OPTION(EMBREE_ISPC_SUPPORT "Build Embree with support for ISPC applications." ON)
 OPTION(EMBREE_TUTORIALS    "Enable to build Embree tutorials" ON)
 SET(EMBREE_API_NAMESPACE "" CACHE STRING "C++ namespace to put API symbols into.")
@@ -152,19 +154,19 @@ IF (EMBREE_TASKING_SYSTEM STREQUAL "TBB")
   SET(TASKING_TBB      ON )
   SET(TASKING_INTERNAL OFF)
   SET(TASKING_PPL      OFF )
-  ADD_DEFINITIONS(-DTASKING_TBB)
+  LIST(APPEND GLOBAL_DEFINITIONS -DTASKING_TBB)
   LIST(APPEND ISPC_DEFINITIONS -DTASKING_TBB)
 ELSEIF (EMBREE_TASKING_SYSTEM STREQUAL "PPL")
   SET(TASKING_PPL      ON )
   SET(TASKING_TBB      OFF )
   SET(TASKING_INTERNAL OFF)
-  ADD_DEFINITIONS(-DTASKING_PPL)
+  LIST(APPEND GLOBAL_DEFINITIONS -DTASKING_PPL)
   LIST(APPEND ISPC_DEFINITIONS -DTASKING_PPL)
 ELSE()
   SET(TASKING_INTERNAL ON )
   SET(TASKING_TBB      OFF)
   SET(TASKING_PPL      OFF )
-  ADD_DEFINITIONS(-DTASKING_INTERNAL)
+  LIST(APPEND GLOBAL_DEFINITIONS -DTASKING_INTERNAL)
   LIST(APPEND ISPC_DEFINITIONS -DTASKING_INTERNAL)
 ENDIF()
 
@@ -364,7 +366,7 @@ UNSET(FLAGS_LOWEST)
 SET(ISA_LOWEST_AVX 2)
 
 IF (EMBREE_ISA_SSE2)
-  ADD_DEFINITIONS(-DEMBREE_TARGET_SSE2)
+  LIST(APPEND GLOBAL_DEFINITIONS -DEMBREE_TARGET_SSE2)
   LIST(APPEND ISPC_TARGETS "sse2")
   IF(NOT FLAGS_LOWEST)
     SET(ISA_LOWEST ${SSE2})
@@ -373,7 +375,7 @@ IF (EMBREE_ISA_SSE2)
 ENDIF()
 
 IF (EMBREE_ISA_SSE42)
-  ADD_DEFINITIONS(-DEMBREE_TARGET_SSE42)
+  LIST(APPEND GLOBAL_DEFINITIONS -DEMBREE_TARGET_SSE42)
   LIST(APPEND ISPC_TARGETS "sse4")
   IF(NOT FLAGS_LOWEST)
     SET(ISA_LOWEST ${SSE42})
@@ -382,7 +384,7 @@ IF (EMBREE_ISA_SSE42)
 ENDIF ()
 
 IF (EMBREE_ISA_AVX)
-  ADD_DEFINITIONS(-DEMBREE_TARGET_AVX)
+  LIST(APPEND GLOBAL_DEFINITIONS -DEMBREE_TARGET_AVX)
   LIST(APPEND ISPC_TARGETS "avx")
   IF(NOT FLAGS_LOWEST)
     SET(ISA_LOWEST ${AVX})
@@ -392,7 +394,7 @@ IF (EMBREE_ISA_AVX)
 ENDIF ()
 
 IF (EMBREE_ISA_AVX2)
-  ADD_DEFINITIONS(-DEMBREE_TARGET_AVX2)
+  LIST(APPEND GLOBAL_DEFINITIONS -DEMBREE_TARGET_AVX2)
   LIST(APPEND ISPC_TARGETS "avx2")
   IF(NOT FLAGS_LOWEST)
     SET(ISA_LOWEST ${AVX2})
@@ -402,7 +404,7 @@ IF (EMBREE_ISA_AVX2)
 ENDIF ()
 
 IF (EMBREE_ISA_AVX512KNL)
-  ADD_DEFINITIONS(-DEMBREE_TARGET_AVX512KNL)
+  LIST(APPEND GLOBAL_DEFINITIONS -DEMBREE_TARGET_AVX512KNL)
   LIST(APPEND ISPC_TARGETS "avx512knl-i32x16")
   IF(NOT FLAGS_LOWEST)
     SET(ISA_LOWEST ${AVX512KNL})
@@ -412,7 +414,7 @@ IF (EMBREE_ISA_AVX512KNL)
 ENDIF ()
 
 IF (EMBREE_ISA_AVX512SKX)
-  ADD_DEFINITIONS(-DEMBREE_TARGET_AVX512SKX)
+  LIST(APPEND GLOBAL_DEFINITIONS -DEMBREE_TARGET_AVX512SKX)
   LIST(APPEND ISPC_TARGETS "avx512skx-i32x16")
   IF(NOT FLAGS_LOWEST)
     SET(ISA_LOWEST ${AVX512SKX})
