--- a/common/math/CMakeLists.txt
+++ b/common/math/CMakeLists.txt
@@ -1,12 +1,28 @@
 ## Copyright 2009-2020 Intel Corporation
 ## SPDX-License-Identifier: Apache-2.0
 
-ADD_LIBRARY(math STATIC constants.cpp)
-SET_PROPERTY(TARGET math PROPERTY FOLDER common)
-SET_PROPERTY(TARGET math APPEND PROPERTY COMPILE_FLAGS " ${FLAGS_LOWEST}")
-
-IF (EMBREE_STATIC_LIB)
-  INSTALL(TARGETS math EXPORT math-targets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT devel)
-  INSTALL(EXPORT math-targets DESTINATION ${EMBREE_CMAKEEXPORT_DIR} COMPONENT devel)
-ENDIF()
-
+ADD_COMMON_LIBRARY(math
+  PUBLIC_CLASSES
+    constants
+  PUBLIC_HEADERS
+    affinespace.h
+    bbox.h
+    col3.h
+    col4.h
+    color.h
+    interval.h
+    lbbox.h
+    linearspace2.h
+    linearspace3.h
+    math.h
+    obbox.h
+    quaternion.h
+    range.h
+    transcendental.h
+    vec2.h
+    vec2fa.h
+    vec3.h
+    vec3ba.h
+    vec3fa.h
+    vec3ia.h
+    vec4.h)
