--- a/kernels/CMakeLists.txt
+++ b/kernels/CMakeLists.txt
@@ -222,7 +222,14 @@ ENDMACRO()
 
 DISABLE_STACK_PROTECTOR_FOR_INTERSECTORS(${EMBREE_LIBRARY_FILES})
 ADD_LIBRARY(embree ${EMBREE_LIB_TYPE} ${EMBREE_LIBRARY_FILES} $<TARGET_OBJECTS:algorithms>)
-SET_TARGET_PROPERTIES(embree PROPERTIES COMPILE_FLAGS "${FLAGS_LOWEST}")
+TARGET_COMPILE_DEFINITIONS(embree PUBLIC ${GLOBAL_DEFINITIONS})
+
+function(SET_TARGET_FLAGS target scope flags)
+  string(REPLACE " " ";" flags_list ${flags})
+  TARGET_COMPILE_OPTIONS(${target} ${scope} "${flags_list}")
+endfunction()
+
+SET_TARGET_FLAGS(embree PUBLIC ${FLAGS_LOWEST})
 SET_TARGET_PROPERTIES(embree PROPERTIES COMPILE_DEFINITIONS "EMBREE_LOWEST_ISA")
 SET_PROPERTY(TARGET embree PROPERTY FOLDER kernels)
 IF (NOT WIN32 AND NOT  APPLE)
@@ -231,7 +238,8 @@ ENDIF()
 
 #IF (EMBREE_ISA_SSE2 AND EMBREE_LIBRARY_FILES_SSE2)
 #  ADD_LIBRARY(embree_sse2 STATIC ${EMBREE_LIBRARY_FILES_SSE2})
-#  SET_TARGET_PROPERTIES(embree_sse2 PROPERTIES COMPILE_FLAGS "${FLAGS_SSE2}")
+#  TARGET_COMPILE_DEFINITIONS(embree_sse2 PUBLIC ${GLOBAL_DEFINITIONS})
+#  SET_TARGET_FLAGS(embree_sse2 PRIVATE "${FLAGS_SSE2}")
 #  SET_PROPERTY(TARGET embree_sse2 PROPERTY FOLDER kernels)
 #  SET(EMBREE_LIBRARIES ${EMBREE_LIBRARIES} embree_sse2)
 #  CheckGlobals(embree_sse2)
@@ -243,11 +251,14 @@ ENDIF()
 IF (EMBREE_ISA_SSE42 AND EMBREE_LIBRARY_FILES_SSE42)
   DISABLE_STACK_PROTECTOR_FOR_INTERSECTORS(${EMBREE_LIBRARY_FILES_SSE42})
   ADD_LIBRARY(embree_sse42 STATIC ${EMBREE_LIBRARY_FILES_SSE42})
-  SET_TARGET_PROPERTIES(embree_sse42 PROPERTIES COMPILE_FLAGS "${FLAGS_SSE42}")
+  TARGET_COMPILE_DEFINITIONS(embree_sse42 PUBLIC ${GLOBAL_DEFINITIONS})
+
+  SET_TARGET_FLAGS(embree_sse42 PRIVATE "${FLAGS_SSE42}")
   SET_PROPERTY(TARGET embree_sse42 PROPERTY FOLDER kernels)
   SET(EMBREE_LIBRARIES ${EMBREE_LIBRARIES} embree_sse42)
   CheckGlobals(embree_sse42)
   IF (EMBREE_STATIC_LIB)
+    TARGET_LINK_LIBRARIES(embree PUBLIC embree_sse42)
     INSTALL(TARGETS embree_sse42 EXPORT embree_sse42-targets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT devel)
     INSTALL(EXPORT embree_sse42-targets DESTINATION ${EMBREE_CMAKEEXPORT_DIR} COMPONENT devel)
   ENDIF()
@@ -256,11 +267,14 @@ ENDIF ()
 IF (EMBREE_ISA_AVX  AND EMBREE_LIBRARY_FILES_AVX)
   DISABLE_STACK_PROTECTOR_FOR_INTERSECTORS(${EMBREE_LIBRARY_FILES_AVX})
   ADD_LIBRARY(embree_avx STATIC ${EMBREE_LIBRARY_FILES_AVX})
-  SET_TARGET_PROPERTIES(embree_avx PROPERTIES COMPILE_FLAGS "${FLAGS_AVX}")
+  TARGET_COMPILE_DEFINITIONS(embree_avx PUBLIC ${GLOBAL_DEFINITIONS})
+
+  SET_TARGET_FLAGS(embree_avx PRIVATE "${FLAGS_AVX}")
   SET_PROPERTY(TARGET embree_avx PROPERTY FOLDER kernels)
   SET(EMBREE_LIBRARIES ${EMBREE_LIBRARIES} embree_avx)
   CheckGlobals(embree_avx)
   IF (EMBREE_STATIC_LIB)
+    TARGET_LINK_LIBRARIES(embree PUBLIC embree_avx)
     INSTALL(TARGETS embree_avx EXPORT embree_avx-targets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT devel)
     INSTALL(EXPORT embree_avx-targets DESTINATION ${EMBREE_CMAKEEXPORT_DIR} COMPONENT devel)
   ENDIF()
@@ -269,11 +283,14 @@ ENDIF()
 IF (EMBREE_ISA_AVX2 AND EMBREE_LIBRARY_FILES_AVX2)
   DISABLE_STACK_PROTECTOR_FOR_INTERSECTORS(${EMBREE_LIBRARY_FILES_AVX2})
   ADD_LIBRARY(embree_avx2 STATIC ${EMBREE_LIBRARY_FILES_AVX2})
-  SET_TARGET_PROPERTIES(embree_avx2 PROPERTIES COMPILE_FLAGS "${FLAGS_AVX2}")
+  TARGET_COMPILE_DEFINITIONS(embree_avx2 PUBLIC ${GLOBAL_DEFINITIONS})
+
+  SET_TARGET_FLAGS(embree_avx2 PRIVATE "${FLAGS_AVX2}")
   SET_PROPERTY(TARGET embree_avx2 PROPERTY FOLDER kernels)
   SET(EMBREE_LIBRARIES ${EMBREE_LIBRARIES} embree_avx2)
   CheckGlobals(embree_avx2)
   IF (EMBREE_STATIC_LIB)
+    TARGET_LINK_LIBRARIES(embree PUBLIC embree_avx2)
     INSTALL(TARGETS embree_avx2 EXPORT embree_avx2-targets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT devel)
     INSTALL(EXPORT embree_avx2-targets DESTINATION ${EMBREE_CMAKEEXPORT_DIR} COMPONENT devel)
   ENDIF()
@@ -282,11 +299,14 @@ ENDIF()
 IF (EMBREE_ISA_AVX512KNL AND EMBREE_LIBRARY_FILES_AVX512KNL)
   DISABLE_STACK_PROTECTOR_FOR_INTERSECTORS(${EMBREE_LIBRARY_FILES_AVX512KNL})
   ADD_LIBRARY(embree_avx512knl STATIC ${EMBREE_LIBRARY_FILES_AVX512KNL})
-  SET_TARGET_PROPERTIES(embree_avx512knl PROPERTIES COMPILE_FLAGS "${FLAGS_AVX512KNL}")
+  TARGET_COMPILE_DEFINITIONS(embree_avx512knl PUBLIC ${GLOBAL_DEFINITIONS})
+
+  SET_TARGET_FLAGS(embree_avx512knl PRIVATE "${FLAGS_AVX512KNL}")
   SET_PROPERTY(TARGET embree_avx512knl PROPERTY FOLDER kernels)
   SET(EMBREE_LIBRARIES ${EMBREE_LIBRARIES} embree_avx512knl)
   CheckGlobals(embree_avx512knl)
   IF (EMBREE_STATIC_LIB)
+    TARGET_LINK_LIBRARIES(embree PUBLIC embree_avx512knl)
     INSTALL(TARGETS embree_avx512knl EXPORT embree_avx512knl-targets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT devel)
     INSTALL(EXPORT embree_avx512knl-targets DESTINATION ${EMBREE_CMAKEEXPORT_DIR} COMPONENT devel)
   ENDIF()
@@ -295,11 +315,14 @@ ENDIF()
 IF (EMBREE_ISA_AVX512SKX AND EMBREE_LIBRARY_FILES_AVX512SKX)
   DISABLE_STACK_PROTECTOR_FOR_INTERSECTORS(${EMBREE_LIBRARY_FILES_AVX512SKX})
   ADD_LIBRARY(embree_avx512skx STATIC ${EMBREE_LIBRARY_FILES_AVX512SKX})
-  SET_TARGET_PROPERTIES(embree_avx512skx PROPERTIES COMPILE_FLAGS "${FLAGS_AVX512SKX}")
+  TARGET_COMPILE_DEFINITIONS(embree_avx512skx PUBLIC ${GLOBAL_DEFINITIONS})
+
+  SET_TARGET_FLAGS(embree_avx512skx PRIVATE "${FLAGS_AVX512SKX}")
   SET_PROPERTY(TARGET embree_avx512skx PROPERTY FOLDER kernels)
   SET(EMBREE_LIBRARIES ${EMBREE_LIBRARIES} embree_avx512skx)
   CheckGlobals(embree_avx512skx)
   IF (EMBREE_STATIC_LIB)
+    TARGET_LINK_LIBRARIES(embree PUBLIC embree_avx512skx)
     INSTALL(TARGETS embree_avx512skx EXPORT embree_avx512skx-targets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT devel)
     INSTALL(EXPORT embree_avx512skx-targets DESTINATION ${EMBREE_CMAKEEXPORT_DIR} COMPONENT devel)
   ENDIF()
