--- a/common/lexers/CMakeLists.txt
+++ b/common/lexers/CMakeLists.txt
@@ -1,17 +1,11 @@
 ## Copyright 2009-2020 Intel Corporation
 ## SPDX-License-Identifier: Apache-2.0
 
-ADD_LIBRARY(lexers STATIC
- stringstream.cpp
- tokenstream.cpp
-)
-TARGET_LINK_LIBRARIES(lexers sys math)
-SET_PROPERTY(TARGET lexers PROPERTY FOLDER common)
-SET_PROPERTY(TARGET lexers APPEND PROPERTY COMPILE_FLAGS " ${FLAGS_LOWEST}")
-
-IF (EMBREE_STATIC_LIB)
-  INSTALL(TARGETS lexers EXPORT lexers-targets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT devel)
-  INSTALL(EXPORT lexers-targets DESTINATION ${EMBREE_CMAKEEXPORT_DIR} COMPONENT devel)
-ENDIF()
-
-
+ADD_COMMON_LIBRARY(lexers
+  PUBLIC_CLASSES
+    stringstream
+    tokenstream
+  PUBLIC_HEADERS
+    parsestream.h
+    streamfilters.h
+    stream.h)
