--- a/common/sys/CMakeLists.txt
+++ b/common/sys/CMakeLists.txt
@@ -4,25 +4,26 @@
 SET(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 FIND_PACKAGE(Threads REQUIRED)
 
-ADD_LIBRARY(sys STATIC
-  sysinfo.cpp
-  alloc.cpp
-  filename.cpp
-  library.cpp
-  thread.cpp
-  string.cpp
-  regression.cpp
-  mutex.cpp
-  condition.cpp
-  barrier.cpp
+ADD_COMMON_LIBRARY(sys
+  PUBLIC_CLASSES
+    alloc
+    barrier
+    condition
+    filename
+    library
+    mutex
+    regression
+    string
+    sysinfo
+    thread
+  PUBLIC_HEADERS
+    array.h
+    atomic.h
+    intrinsics.h
+    platform.h
+    ref.h
+    vector.h
+  LIBRARIES
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${CMAKE_DL_LIBS}
 )
-
-TARGET_LINK_LIBRARIES(sys ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})
-SET_PROPERTY(TARGET sys PROPERTY FOLDER common)
-SET_PROPERTY(TARGET sys APPEND PROPERTY COMPILE_FLAGS " ${FLAGS_LOWEST}")
-
-IF (EMBREE_STATIC_LIB)
-  INSTALL(TARGETS sys EXPORT sys-targets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT devel)
-  INSTALL(EXPORT sys-targets DESTINATION ${EMBREE_CMAKEEXPORT_DIR} COMPONENT devel)
-ENDIF()
-
