--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -41,7 +41,9 @@ FUNCTION(ADD_COMMON_LIBRARY NAME)
       INSTALL(EXPORT ${NAME}-targets DESTINATION ${EMBREE_CMAKEEXPORT_DIR} COMPONENT devel)
     ENDIF()
 
-    TARGET_INCLUDE_DIRECTORIES(${NAME} PUBLIC "${args_INCLUDE_DIRS}")
+    if(args_INCLUDE_DIRS)
+        TARGET_INCLUDE_DIRECTORIES(${NAME} PRIVATE "${args_INCLUDE_DIRS}")
+    endif(args_INCLUDE_DIRS)
 ENDFUNCTION(ADD_COMMON_LIBRARY)
 
 ADD_SUBDIRECTORY(sys)
