--- a/kernels/CMakeLists.txt
+++ b/kernels/CMakeLists.txt
@@ -221,7 +221,7 @@ MACRO (CheckGlobals library)
 ENDMACRO()
 
 DISABLE_STACK_PROTECTOR_FOR_INTERSECTORS(${EMBREE_LIBRARY_FILES})
-ADD_LIBRARY(embree ${EMBREE_LIB_TYPE} ${EMBREE_LIBRARY_FILES} $<TARGET_OBJECTS:algorithms>)
+ADD_LIBRARY(embree ${EMBREE_LIB_TYPE} ${EMBREE_LIBRARY_FILES})
 TARGET_COMPILE_DEFINITIONS(embree PUBLIC ${GLOBAL_DEFINITIONS})
 
 function(SET_TARGET_FLAGS target scope flags)
@@ -251,9 +251,9 @@ ENDIF()
 IF (EMBREE_ISA_SSE42 AND EMBREE_LIBRARY_FILES_SSE42)
   DISABLE_STACK_PROTECTOR_FOR_INTERSECTORS(${EMBREE_LIBRARY_FILES_SSE42})
   ADD_LIBRARY(embree_sse42 STATIC ${EMBREE_LIBRARY_FILES_SSE42})
+  TARGET_LINK_LIBRARIES(embree_sse42 PRIVATE tasking)
   TARGET_COMPILE_DEFINITIONS(embree_sse42 PUBLIC ${GLOBAL_DEFINITIONS})
   SET_TARGET_PROPERTIES(embree_sse42 PROPERTIES COMPILE_FLAGS "${FLAGS_SSE42}")
-  TARGET_LINK_LIBRARIES(embree_sse42 PRIVATE tasking)
   SET_PROPERTY(TARGET embree_sse42 PROPERTY FOLDER kernels)
   SET(EMBREE_LIBRARIES ${EMBREE_LIBRARIES} embree_sse42)
   CheckGlobals(embree_sse42)
